--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
-supabase==2.16.0
+supabase==2.3.4
 python-dotenv==1.0.0
 geopy==2.4.0
 requests==2.31.0
 Werkzeug==2.3.7
+httpx==0.26.0
